# ARC

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: methodology.md  metric_definitions.md  promoted_handoff.md  roadmap.md
src/arc/: __init__.py  breakout_defs.py  cli.py  cohort_builder.py  exports.py  handoff.py  metrics.py  models.py  trajectory.py
src/arc/config/: __init__.py  buckets.py  positions.py  thresholds.py
tests/: test_baseline_outputs.py  test_cohort_builder.py  test_imports.py  test_metrics.py  test_promoted_handoff.py
